--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=4000
 MONGO_URI=mongodb+srv://mila:learn123@cluster0.mrflfdw.mongodb.net/?retryWrites=true&w=majority
+SECRET = mng2sjfw2eo9jier3ds2gfg0gsd5gs3
